fix: prevent horizontal overflow on narrow screens

--- a/source/css/index.styl
+++ b/source/css/index.styl
@@ -15,13 +15,16 @@ html
   font-size: 60%;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  overflow-x: hidden;
 
 body
+  width: 100%
   min-height: 100vh
   display: flex
   flex-direction: column
   margin:0;
   padding:0;
+  overflow-x: hidden;
   color: #494e52;
   font-size: 1.8em;
   line-height: 1.5;
